--- a/movie-db-app-template/package.json
+++ b/movie-db-app-template/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://Razieh-Abedi.github.io/movie-db-app-template",
   "name": "movie-db-app-template",
   "version": "0.1.0",
   "private": true,
@@ -7,21 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "useparams": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
